<resources>
    <string name="app_name">Beddingku</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_search">Search</string>
    <string name="title_help">Help</string>
    <string name="title_brand">Brand</string>
    <string name="title_account">Account</string>

    <string name="text_bag">Shopping Bag</string>
    <string name="text_size">Size</string>
    <string name="text_color">Color</string>
    <string name="text_description">Description</string>
    <string name="text_addtobag">Add to Bag</string>

    <!-- IMAGE DESCRIPTION -->
    <string name="image_banner">Banner image</string>
    <string name="image_product">Product image</string>

    <!-- DUMMY -->
    <string name="product_brand">Dunlopillo</string>
    <string name="product_name">Dunlopillo Pincore Latex Lavender Pillow</string>
    <string name="product_price">IDR 1.999.999</string>
    <string name="product_size">Big</string>
    <string name="product_color">Black</string>
    <string name="product_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
