<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/menu_category"
        android:icon="@drawable/ic_app"
        android:title="@string/title_category" />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help"
        android:title="@string/title_help" />

    <item
        android:id="@+id/menu_account"
        android:icon="@drawable/ic_user"
        android:title="@string/title_account" />

</menu>
